<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">parking lot manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="parking">我要停车</string>
     <string name="leaving">结算金额</string>
    <string name="comment">留言</string>
    <string name="welcome">欢迎来到balaba停车场</string>
    <string name="card">您的车位号</string>
    <string name="cardnumber">number</string>
    <string name="timeclock">现在时间</string>
    <string name="leavingtime">离开时间</string>
    <string name="button_route">车位线路提示</string>
    <string name="textcash">结算金额</string>
    <string name="title">留言板 </string>
    <string name="save">保存</string>
    <string name="commentmessage">请输入留言</string>
</resources>
