<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bgg4">

    <TextView
        android:id="@+id/text_cardnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/text_card"
        android:text="@string/cardnumber"
        android:textColor="#fff"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:text="@string/card"
        android:textColor="#fff"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/analogClock1"
        android:text="@string/timeclock"
        android:textColor="#fff"
        android:textSize="28dp" />

    <DigitalClock
        android:id="@+id/digicalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/text_time"
        android:layout_below="@+id/text_time"
        android:layout_marginTop="22dp"
        android:textColor="#fff"
        android:textSize="20sp" />

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_cardnumber"
        android:layout_marginTop="46dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:text="返回主界面"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:text="@string/button_route"
        android:textColor="#fff"
        android:textSize="30sp" />

</RelativeLayout>
