<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.parkinglotmanager.MainActivity" >

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_comment "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_welcome"
        android:layout_below="@+id/button_leaving"
        android:layout_marginTop="46dp"
        android:text="@string/comment"
        android:textColor="#fff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_leaving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_comment "
        android:layout_below="@+id/button_parking"
        android:layout_marginTop="44dp"
        android:text="@string/leaving"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/text_welcome"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginRight="26dp"
        android:text="30"
        android:textColor="#fff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_parking"
        android:layout_below="@+id/text_welcome"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="69dp"
        android:textColor="#fff"
        android:text="剩余车位个数"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_parking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_leaving"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="31dp"
        android:text="@string/parking"
        android:textColor="#fff"
        android:textSize="20sp" />

</RelativeLayout>